Make buildtools a gradle plugin to automate it as a dependency